--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-    "dependencies": {
-        "dotenv": "^16.4.5",
-        "express": "^4.21.1",
-        "nodemon": "^3.1.7"
-    },
-    "name": "iod_mod5",
-    "version": "1.0.0",
-    "description": "Practicing backend development with express",
-    "main": "server.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon server.js",
-        "start": "node server.js"
-    },
-    "keywords": [
-        "Backend",
-        "Express",
-        "Learning"
-    ],
-    "author": "Collin Chamberlin",
-    "license": "MIT"
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
+  },
+  "name": "iod_mod5",
+  "version": "1.0.0",
+  "description": "Practicing backend development with express",
+  "main": "server.js",
+  "scripts": {
+    "test": "jest",
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
+  "keywords": [
+    "Backend",
+    "Express",
+    "Learning"
+  ],
+  "author": "Julian Todd",
+  "license": "MIT"
 }
